<resources>
    <string name="app_name">Material Design</string>
    <string name="daily_image_view_description">Image of the day</string>
    <string name="wikipedia_edit_text_hint">Type your request here</string>
    <string name="wikipedia_edit_text_helper_text">Search in Wikipedia</string>
    <string name="hd">HD</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="police_theme">Police theme</string>
    <string name="purple_and_yellow_theme">Purlow theme</string>
    <string name="daily_image">Daily image</string>
    <string name="earth_photos">Earth photos</string>
    <string name="weather_info">Weather info</string>
    <string name="earth_image">Earth image</string>
    <string name="gst_list_description">Geomagnetic Storms (GST) for the last year:</string>
    <string name="space_weather">Space weather</string>
</resources>